@@ -1,3 +1,9 @@
+Wed Jun 15 14:40:56 CEST 2005 Daniel Veillard <veillard@redhat.com>
+
+	* server/gam_poll.c: another cleanup of poll only support from 
+	  Neal H. Walfield which should not affect the dnotify back-end,
+	  should fix #307745
+
 Wed Jun 15 13:01:11 CEST 2005 Daniel Veillard <veillard@redhat.com>
 
 	* libgamin/gam_api.c server/gam_channel.c: reverted patch from
